--- a/CTWUXClassExercise/Properties/codeTheWay.html
+++ b/CTWUXClassExercise/Properties/codeTheWay.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="codeTheWaycss.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <meta name="viewport" content="width=divice-width, initial-scale=1" />
     <title>Code the Way</title>
 </head>
 
@@ -13,17 +16,17 @@
     <h3 class="heading2">Mission</h3>
     <p class="body">Code the Way facilitates the collaboration of schools, companies, and nonprofits to: (1) Offer students advanced computer science training and real-world job experiences working on projects that benefit nonprofits; (2) Increase certified computer science teachers; and (3) Contribute to the technology talent base.</p>
     <p class="body">Code the Way model includes:</p>
-    <ul>
-        <li class="body">Student access to real-world job experience – In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.</li>
-        <li class="body">Companies are part of the solution – Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.</li>
-        <li class="body">Increasing certified computer science teachers – Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.</li>
-    </ul>
+    <div class="container">
+        <ul>
+            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="In addition to an advanced course that may earn post-secondary credits, students get experience working collaboratively on a project that benefits a nonprofit, culminating in a presentation to business leaders.">Student access to real-world job experience</a></li>
+            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Companies invest in education, make technology more accessible to nonprofits, offer their employees a meaningful volunteer experience, and contribute to the talent pipeline.">Companies are part of the solution</a></li>
+            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Support and training for computer science teacher certification increases the availability and quality of high school computer science programs.">Increasing certified computer science teachers</a></li>
+        </ul>
+    </div>
+ 
     <img src="/Images/Team Learning.jpg" height="20%" width="35%" align="right" />
     <h3 class="heading2">Vision</h3>
     <p class="body">High school students in Greater Milwaukee have access to high quality computer science education and real-world job experiences, positioning them for success in technology-related fields.</p>
-    
-    <button onclick="showHide()" class="button">How It Began</button>
-    <div id="summer">In the summer of 2017, Code The Way began it's first internship opportunity at the company SafeNet Consulting. There, students built a customized full-stack solution for the non-profit organization Life Navigators.</div>
 
     <h3 class="heading2">Links</h3>
     <a href="lifeNavigators.html" class="button">Life Navigators</a>
@@ -48,5 +51,9 @@
         var y = document.getElementById("summer");
         y.style.display = "none";
     }
+
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
 </script>
 
