--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -2,10 +2,13 @@
 <html>
 <head>
     <link rel="stylesheet" href="codeTheWaycss.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=divice-width, initial-scale=1" />
     <title>Heroes For Healthcare</title>
 </head>
-<body>
+<body onload="hide()">
 
     <img src="/Images/Heroes Logo.png" height="5%" width="10%" /> <h1 align="center" class="heading1">Heroes For Healthcare</h1>
 
@@ -29,24 +32,50 @@
     <p class="body">
         Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
     </p>
-    <ul>
-        <li class="body">
-            453,000 unemployed veterans in 2016
-        </li>
-        <li class="body">
-            Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans
-        </li>
-    </ul>
+
+    <div class="container">
+        <ul>
+            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
+            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
+        </ul>
+    </div>
     <br />
 
-    <h3 class="heading2">Message From the President</h3>
-    <p class="body">
-        I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
+    <button onclick="showHide()" class="button">Show Message</button>
 
-        We need supporters like you to help our mission so our service members can get a job and better their lives.
+    <div class="container" id="message">
+        <h3 class="heading2">Message From the President</h3>
+        <p class="body">
+            I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
 
-        After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
-    </p>
+            We need supporters like you to help our mission so our service members can get a job and better their lives.
+
+            After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
+        </p>
+    </div>
     <a href="codeTheWay.html" class="button">Home</a>
 </body>
 </html>
+
+<script>
+    function showHide() {
+        var x = document.getElementById("message");
+        if (x.style.display !== "none") {
+            x.style.display = "none";
+        }
+        else {
+            x.style.display = "block";
+        }
+    }
+
+    function hide() {
+        var y = document.getElementById("message");
+        y.style.display = "none";
+    }
+
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+
+</script>
+
