--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="codeTheWaycss.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -9,53 +10,96 @@
     <title>Heroes For Healthcare</title>
 </head>
 <body onload="hide()">
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <img src="/Images/Heroes Logo.png" height="5%" width="10%" />
+        <div class="col-sm-8" align="center">
+            <h1 align="center" class="heading1">Heroes For Healthcare</h1>
+        </div>
+    </div>
 
-    <img src="/Images/Heroes Logo.png" height="5%" width="10%" /> <h1 align="center" class="heading1">Heroes For Healthcare</h1>
-
-    <img src="/Images/Heroes2.png" height="20%" width="35%" align="left" />
     <br />
-    <h3 class="heading2">Mision</h3>
-    <p class="body">
-        Our non-profit organization is a resource for our military personnel to start a career in healthcare.
-    </p>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <img src="/Images/Heroes3.png" height="20%" width="35%" align="right" />
-
-
-    <h3 class="heading2">Unemployed Veterans</h3>
-
-    <p class="body">
-        Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
-    </p>
-
-    <div class="container">
-        <ul>
-            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
-            <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
-        </ul>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-3">
+            <a href="codeTheWay.html" class="button">Code The Way</a>
+        </div>
+        <div class="col-sm-3">
+            <a href="lifeNavigators.html" class="button">Life Navigators</a>
+        </div>
+        <div class="col-sm-3">
+            <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
+        </div>
+        <div class="col-sm-2">
+            <a href="media.html" class="button">Media</a>
+        </div>
     </div>
     <br />
-
-    <button onclick="showHide()" class="button">Show Message</button>
-    <br />
-
-    <div class="container" id="message">
-        <h3 class="heading2">Message From the President</h3>
-        <p class="body">
-            I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
-
-            We need supporters like you to help our mission so our service members can get a job and better their lives.
-
-            After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
-        </p>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-2">
+            <h3 class="heading2">Mision</h3>
+        </div>
+        <div class="col-sm-5">
+            <p class="body">
+                Our non-profit organization is a resource for our military personnel to start a career in healthcare.
+            </p>
+        </div>
+        <img src="/Images/Heroes2.png" height="15%" width="30%" align="left" />
     </div>
     <br />
-    <a href="codeTheWay.html" class="button">Home</a>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-2">
+            <h3 class="heading2">Unemployed Veterans</h3>
+        </div>
+        <div class="col-sm-5">
+            <p class="body">
+                Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
+            </p>
+            <div class="container">
+                <ul>
+                    <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="453,000 unemployed veterans in 2016">Number of Unemployed</a></li>
+                    <li><a class="body" href="#" data-toggle="tooltip" data-placement="bottom" title="Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans">Rates of Unemployment</a></li>
+                </ul>
+            </div>
+        </div>
+        <img src="/Images/Heroes3.png" height="15%" width="30%" align="right" />
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-2">
+            <button onclick="showHide()" class="button">Show Message</button>
+        </div>
+    </div>
+    <br />
+    <div id="message">
+        <div class="row">
+            <div class="col-sm-1">
+            </div>
+            <div class="col-sm-2">
+                <h3 class="heading2">Message From the President</h3>
+            </div>
+            <div class="col-sm-5">
+                <p class="body">
+                    I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
+
+                    We need supporters like you to help our mission so our service members can get a job and better their lives.
+
+                    After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
+                </p>
+            </div>
+        </div>
+    </div>
+    <br />
 </body>
 </html>
 
