--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -1,27 +1,71 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="codeTheWaycss.css" />
     <meta charset="utf-8" />
     <title>Media</title>
 </head>
 <body>
-    <h1 align="center" class="heading1">Media</h1>
+    <br />
+    <br />
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-10" align="center">
+            <h1 align="center" class="heading1">Media</h1>
+        </div>
+    </div>
 
-    <img src="/Images/Team Programming.jpg" width="30%"/>
-    <img src="/Images/Code Review.jpg"  width="30%/>
-    <img src="/Images/Definition of done.jpg"  width="30%"/>
-    <img src="/Images/Hallway.jpg"  width="30%" />
-    <img src="/Images/Project Management.jpg"  width="30%"/>
-    <img src="/Images/Sprint Planning.jpg" width="30%"/>
-    <img src="/Images/Sprint Review.jpg" width="30%"/>
-    <img src="/Images/Sprint review-code demo.jpg" width="30%"/>
-    <img src="/Images/Stand Up.jpg" width="30%"/>
-    <img src="/Images/Team Learning.jpg"  width="30%"/>
-    <img src="/Images/To do list.jpg"  width="30%"/>
-    <img src="/Images/Update.jpg"  width="30%"/>
-    <img src="/Images/Work Time.jpg"  width="30%"/>
-  
-    <a href="codeTheWay.html" class="button">Home</a>
+    <br />
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-3">
+            <a href="codeTheWay.html" class="button">Code The Way</a>
+        </div>
+        <div class="col-sm-3">
+            <a href="lifeNavigators.html" class="button">Life Navigators</a>
+        </div>
+        <div class="col-sm-3">
+            <a href="heroesForHealthcare.html" class="button">Heroes For Healthcare</a>
+        </div>
+        <div class="col-sm-2">
+            <a href="media.html" class="button">Media</a>
+        </div>
+    </div>
+    <br />
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+            <img src="/Images/Code Review.jpg" height="20%" width="30%" />
+            <img src="/Images/Definition of done.jpg" height="20%" width="30%" />
+            <img src="/Images/Project Management.jpg" height="20%" width="30%" />            
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+            <img src="/Images/Sprint Planning.jpg" height="20%" width="30%" />
+            <img src="/Images/Sprint Review.jpg" height="20%" width="30%" />
+            <img src="/Images/Sprint review-code demo.jpg" height="20%" width="30%" />
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+            <img src="/Images/Stand Up.jpg" height="20%" width="30%" />
+            <img src="/Images/Team Learning.jpg" height="20%" width="30%" />
+            <img src="/Images/To do list.jpg"height="20%" width="30%" />
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <img src="/Images/Team Programming.jpg" height="10%" width="15%" />
+        <img src="/Images/Update.jpg" height="20%" width="30%" />
+        <img src="/Images/Hallway.jpg" height="10%" width="15%" />
+        <img src="/Images/Work Time.jpg" height="20%" width="30%" />
+
+    </div>
+    <br />
+
 </body>
 </html>
