--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -38,23 +38,62 @@
     <div class="row">
         <div class="col-sm-1">
         </div>
-            <img src="/Images/Code Review.jpg" height="20%" width="30%" />
-            <img src="/Images/Definition of done.jpg" height="20%" width="30%" />
-            <img src="/Images/Project Management.jpg" height="20%" width="30%" />            
+        <img src="/Images/Code Review.jpg" height="20%" width="30%" />
+        <img src="/Images/Definition of done.jpg" height="20%" width="30%" />
+        <img src="/Images/Project Management.jpg" height="20%" width="30%" />
     </div>
     <div class="row">
         <div class="col-sm-1">
         </div>
-            <img src="/Images/Sprint Planning.jpg" height="20%" width="30%" />
-            <img src="/Images/Sprint Review.jpg" height="20%" width="30%" />
-            <img src="/Images/Sprint review-code demo.jpg" height="20%" width="30%" />
+        <div class="col-sm-4">
+            <p class="body">Code Review</p>
+        </div>
+        <div class="col-sm-4">
+            <p class="body">Definition of Done</p>
+        </div>
+        <div class="col-sm-3">
+            <p class="body">Project Management</p>
+        </div>
     </div>
     <div class="row">
         <div class="col-sm-1">
         </div>
-            <img src="/Images/Stand Up.jpg" height="20%" width="30%" />
-            <img src="/Images/Team Learning.jpg" height="20%" width="30%" />
-            <img src="/Images/To do list.jpg"height="20%" width="30%" />
+        <img src="/Images/Sprint Planning.jpg" height="20%" width="30%" />
+        <img src="/Images/Sprint Review.jpg" height="20%" width="30%" />
+        <img src="/Images/Sprint review-code demo.jpg" height="20%" width="30%" />
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-4">
+            <p class="body">Sprint Planning</p>
+        </div>
+        <div class="col-sm-4">
+            <p class="body">Sprint Review</p>
+        </div>
+        <div class="col-sm-3">
+            <p class="body">Sprint Review - Code Demo</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <img src="/Images/Stand Up.jpg" height="20%" width="30%" />
+        <img src="/Images/Team Learning.jpg" height="20%" width="30%" />
+        <img src="/Images/To do list.jpg" height="20%" width="30%" />
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-4">
+            <p class="body">Stand Up</p>
+        </div>
+        <div class="col-sm-4">
+            <p class="body">Team Learning</p>
+        </div>
+        <div class="col-sm-3">
+            <p class="body">To Do List</p>
+        </div>
     </div>
     <div class="row">
         <div class="col-sm-1">
@@ -63,7 +102,22 @@
         <img src="/Images/Update.jpg" height="20%" width="30%" />
         <img src="/Images/Hallway.jpg" height="10%" width="15%" />
         <img src="/Images/Work Time.jpg" height="20%" width="30%" />
-
+    </div>
+    <div class="row">
+        <div class="col-sm-1">
+        </div>
+        <div class="col-sm-3">
+            <p class="body">Team Programming</p>
+        </div>
+        <div class="col-sm-2">
+            <p class="body">Update</p>
+        </div>
+        <div class="col-sm-3">
+            <p class="body">Waiting in the Hallway</p>
+        </div>
+        <div class="col-sm-2">
+            <p class="body">Work Time</p>
+        </div>
     </div>
     <br />
 
