--- a/CTWUXClassExercise/Properties/heroesForHealthcare.html
+++ b/CTWUXClassExercise/Properties/heroesForHealthcare.html
@@ -7,46 +7,34 @@
 </head>
 <body>
 
-    <img src="/Images/Heroes Logo.png" height="5%" width="10%" /> <h1 align="center" class="heading1">Heroes For Healthcare</h1>
+    <img src="/Images/Heroes Logo.png" height="5%" width="10%" />
+    <p class="majorHeading" align="center">Heroes For Healthcare</p>
 
     <img src="/Images/Heroes2.png" height="20%" width="35%" align="left" />
     <br />
-    <h3 class="heading2">Mision</h3>
-    <p class="body">
-        Our non-profit organization is a resource for our military personnel to start a career in healthcare.
-    </p>
-    <br />
+    <p class="minorHeading">Mision</p>
+    <p class="body">Our non-profit organization is a resource for our military personnel to start a career in healthcare.</p>
+    <br />    
     <br />
     <br />
     <br />
     <br />
     <br />
     <img src="/Images/Heroes3.png" height="20%" width="35%" align="right" />
-
-
-    <h3 class="heading2">Unemployed Veterans</h3>
-
-    <p class="body">
-        Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.
-    </p>
-    <ul>
-        <li class="body">
-            453,000 unemployed veterans in 2016
-        </li>
-        <li class="body">
-            Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans
-        </li>
-    </ul>
+    <p class="minorHeading">Unemployed Veterans</p>
+    <div class="bodyText">
+        <p>Many U.S. Veterans find it hard to secure a job in healthcare when they’re ready to work in the civilian world. Even after showing dedication, strong work ethic, and leadership while serving our country, many military members can’t find jobs.</p>
+        <ul>
+            <li>453,000 unemployed veterans in 2016</li>
+            <li>Post-Sept. 11 veterans tend to be unemployed at higher rates than other veterans</li>
+        </ul>
+    </div>
     <br />
-
-    <h3 class="heading2">Message From the President</h3>
-    <p class="body">
-        I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
-
-        We need supporters like you to help our mission so our service members can get a job and better their lives.
-
-        After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
+    <p class="minorHeading">Message From the President</p>
+    <p class="body">I started Heroes for Healthcare to help our U.S. military personnel receive the resources and credentials they need to continue their career in healthcare as a civilian.
+       We need supporters like you to help our mission so our service members can get a job and better their lives.
+       After all they did for us, supporting this organization seems like the right thing to do. Make a difference today by supporting Heroes for Healthcare.
     </p>
-    <a href="codeTheWay.html" class="button">Home</a>
+    <a class="buttonFormatting" href="codeTheWay.html">Home</a>
 </body>
 </html>
