--- a/CTWUXClassExercise/Properties/media.html
+++ b/CTWUXClassExercise/Properties/media.html
@@ -6,7 +6,7 @@
     <title>Media</title>
 </head>
 <body>
-    <h1 align="center" class="heading1">Media</h1>
+    <p class="majorHeading" align="center">Media</p>
 
     <img src="/Images/Team Programming.jpg" width="30%"/>
     <img src="/Images/Code Review.jpg"  width="30%/>
@@ -22,6 +22,6 @@
     <img src="/Images/Update.jpg"  width="30%"/>
     <img src="/Images/Work Time.jpg"  width="30%"/>
   
-    <a href="codeTheWay.html" class="button">Home</a>
+    <a class="buttonFormatting" href="codeTheWay.html">Home</a>
 </body>
 </html>
